--- a/backend/collaboration-service/package.json
+++ b/backend/collaboration-service/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2",
     "ts-node": "^10.9.1",
