--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "autoprefixer": "10.4.15",
     "aws-sdk": "^2.1465.0",
     "bcryptjs-react": "^2.4.6",
+    "bufferutil": "^4.0.7",
     "d3": "^7.8.5",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
@@ -41,12 +42,13 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-quill": "^2.0.0",
-    "socket.io-client": "^4.7.2",
     "react-split": "^2.0.14",
     "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.2",
     "swr": "^2.2.2",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "utf-8-validate": "^5.0.10"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
