--- a/backend/collaboration-service/package.json
+++ b/backend/collaboration-service/package.json
@@ -2,9 +2,9 @@
   "name": "collaboration-service",
   "version": "1.0.0",
   "description": "Collaborative IDE for ",
-  "main": "src/app.ts",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/app.ts",
+    "dev": "nodemon src/app.ts | pino-pretty",
     "build": "tsc -p tsconfig.build.json",
     "start": "node dist/src/app.ts"
   },
@@ -13,13 +13,26 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-pino-logger": "^7.0.0",
     "ioredis": "^5.3.2",
     "nodemon": "^3.0.1",
+    "pino": "^8.15.1",
     "socket.io": "^4.7.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.18"
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.19",
+    "@types/express-pino-logger": "^4.0.3",
+    "@types/jest": "^29.5.4",
+    "@types/node": "^20.8.4",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "pino-prettier": "^1.0.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
