--- a/backend/collaboration-service/package.json
+++ b/backend/collaboration-service/package.json
@@ -13,17 +13,17 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-pino-logger": "^7.0.0",
     "ioredis": "^5.3.2",
     "nodemon": "^3.0.1",
     "pino": "^8.15.1",
+    "pino-http": "^8.5.0",
     "socket.io": "^4.7.2",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
-    "@types/express-pino-logger": "^4.0.3",
+    "@types/pino-http": "^5.8.2",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.8.4",
     "@types/supertest": "^2.0.12",
