--- a/backend/collaboration-service/package.json
+++ b/backend/collaboration-service/package.json
@@ -17,6 +17,7 @@
     "ioredis": "^5.3.2",
     "nodemon": "^3.0.1",
     "pino": "^8.15.1",
+    "pino-http": "^8.5.0",
     "socket.io": "^4.7.2",
     "ts-node": "^10.9.1"
   },
