--- a/.github/workflows/run_backend_services_tests.yml
+++ b/.github/workflows/run_backend_services_tests.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         node-version: [18.x]
-        service: [user-service, question-service]
+        service: [user-service, question-service, collaboration-service]
     steps:
       - name: Checkout Current Branch
         uses: actions/checkout@v2
