--- a/backend/collaboration-service/package.json
+++ b/backend/collaboration-service/package.json
@@ -1,12 +1,13 @@
 {
   "name": "collaboration-service",
   "version": "1.0.0",
-  "description": "Collaborative IDE for ",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/app.ts | pino-pretty",
     "build": "tsc -p tsconfig.build.json",
-    "start": "node dist/src/app.ts"
+    "start": "node dist/src/app.ts",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -18,14 +19,16 @@
     "pino": "^8.15.1",
     "pino-http": "^8.5.0",
     "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.23.2",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
-    "@types/pino-http": "^5.8.2",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.8.4",
+    "@types/pino-http": "^5.8.2",
     "@types/supertest": "^2.0.12",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
