--- a/backend/collaboration-service/package.json
+++ b/backend/collaboration-service/package.json
@@ -26,10 +26,13 @@
     "@babel/preset-typescript": "^7.23.2",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
+    "@types/ioredis-mock": "^8.2.3",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.8.4",
     "@types/pino-http": "^5.8.2",
+    "@types/redis-mock": "^0.17.1",
     "@types/supertest": "^2.0.12",
+    "ioredis-mock": "^8.9.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "pino-prettier": "^1.0.1",
