fix: set env in yml file to test

--- a/.github/workflows/run_backend_services_tests.yml
+++ b/.github/workflows/run_backend_services_tests.yml
@@ -35,6 +35,8 @@ jobs:
           npm ci
 
       - name: Run Tests and Collect Coverage Reports
+        env: 
+          NODE_ENV: test
         run: |
           cd backend/${{matrix.service}}
           npx jest --coverage
