--- a/.github/workflows/run_backend_services_tests.yml
+++ b/.github/workflows/run_backend_services_tests.yml
@@ -15,6 +15,13 @@ jobs:
         os: [ubuntu-latest]
         node-version: [18.x]
         service: [user-service, question-service, collaboration-service]
+
+    services: 
+      redis:    
+        image: redis
+        ports:
+          - 6379:6379 
+
     steps:
       - name: Checkout Current Branch
         uses: actions/checkout@v2
