fix: add env variable for redis to get

--- a/.github/workflows/run_backend_services_tests.yml
+++ b/.github/workflows/run_backend_services_tests.yml
@@ -44,6 +44,7 @@ jobs:
       - name: Run Tests and Collect Coverage Reports
         env: 
           NODE_ENV: test
+          REDIS_URL: redis://localhost:6379
         run: |
           cd backend/${{matrix.service}}
           npx jest --coverage
