--- a/backend/matching-service/package.json
+++ b/backend/matching-service/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/app.ts | pino-pretty",
-    "build": "tsc -p tsconfig.build.json",
-    "start": "node dist/src/app.js",
+    "build": "tsc -p .",
+    "start": "node dist/app.js",
     "test": "jest"
   },
   "keywords": [],
@@ -25,7 +25,6 @@
   "devDependencies": {
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
-    "@types/pino-http": "^5.8.2",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.6.0",
     "@types/supertest": "^2.0.12",
