--- a/backend/question-service/Dockerfile
+++ b/backend/question-service/Dockerfile
@@ -1,23 +1,33 @@
-FROM node:20
+# Reference
+# https://www.andreadiotallevi.com/blog/how-to-create-a-production-image-for-a-node-typescript-app-using-docker-multi-stage-builds
 
+# Stage 1: Build the project
+FROM node:20 AS builder
 ENV NODE_ENV=development
-
-# Create app directory
 WORKDIR /app
-
-# Install app dependencies
-# A wildcard is used to ensure both package.json AND package-lock.json are copied
-# where available (npm@5+)
-COPY ["package.json", "package-lock.json*", "./"]
-RUN npm install
-# If you are building your code for production
-# RUN npm ci --omit=dev
-
-# Bundle app source
 COPY . .
+RUN npm install
+RUN npx prisma generate
+RUN npm run build
 
-ARG port=8001
+# Stage 2: Build the image
+FROM node:20 AS final
+ENV NODE_ENV=production
 
-EXPOSE $port
+WORKDIR /app
+COPY --from=builder ./app/dist ./dist
+COPY --from=builder ./app/node_modules ./node_modules
+COPY package*.json ./
 
-CMD [ "node", "index.js" ]
+ARG PORT=5100
+EXPOSE $PORT
+
+ARG DATABASE_URL
+ENV DATABASE_URL=$DATABASE_URL
+
+# default matching log level
+ARG LOG_LEVEL=info
+ENV LOG_LEVEL=$LOG_LEVEL
+
+# Run image
+CMD ["node", "dist/app.js"]
