--- a/backend/question-service/package.json
+++ b/backend/question-service/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/app.ts",
+    "dev": "nodemon src/app.ts | pino-pretty",
     "build": "tsc -p .",
-    "start": "node dist/src/app.js",
+    "start": "node dist/app.js",
     "test": "jest"
   },
   "prisma": {
@@ -20,6 +20,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "pino": "^8.16.0",
+    "pino-http": "^8.5.0",
     "prisma": "^5.3.1",
     "zod": "^3.22.2"
   },
@@ -32,6 +34,7 @@
     "@types/supertest": "^2.0.12",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "pino-prettier": "^1.0.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
