Add create log group permission for ECSTaskRole

--- a/.aws/peerprep-stack-dev.yaml
+++ b/.aws/peerprep-stack-dev.yaml
@@ -333,6 +333,17 @@ Resources:
             Principal:
               Service: ecs-tasks.amazonaws.com
             Action: 'sts:AssumeRole'
+            Policies:
+      Path: /
+      Policies:
+        - PolicyName: AmazonECSTaskRolePolicy
+          PolicyDocument:
+            Statement:
+            - Effect: Allow
+              Action:
+                # Allow the ECS tasks to create log group to CloudWatch
+                - 'logs:CreateLogGroup'
+              Resource: '*'
   
   #=================================== 
   # ECS Cluster
