Add cors args to dockerfile for question and matching

--- a/.aws/peerprep-stack-dev.yaml
+++ b/.aws/peerprep-stack-dev.yaml
@@ -972,7 +972,7 @@ Resources:
     Properties:
       StageName: 'development'
       ApiId: !Ref 'HttpApi'
-      AutoDeploy: true   
+      AutoDeploy: false   
 
   HttpApiVPCLink:
     Type: AWS::ApiGatewayV2::VpcLink
