--- a/.github/workflows/deploy_backend_aws.yml
+++ b/.github/workflows/deploy_backend_aws.yml
@@ -59,11 +59,12 @@ jobs:
           ENV: ${{ vars.BUILD_ENV }}
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ env.QUESTION_CONTAINER_NAME }}
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
           LOG_LEVEL: ${{ vars.LOG_LEVEL }}
+          CORS: ${{ vars.CORS_ALLOWED_ORIGINS }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: |
           cd backend/$IMAGE_TAG
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . --build-arg NODE_ENV=$ENV --build-arg LOG_LEVEL=$LOG_LEVEL --build-arg DATABASE_URL=$DATABASE_URL
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . --build-arg NODE_ENV=$ENV --build-arg LOG_LEVEL=$LOG_LEVEL --build-arg LOG_LEVEL=$CORS --build-arg DATABASE_URL=$DATABASE_URL
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
       - name: Build, tag, and push ${{ env.MATCHING_CONTAINER_NAME }} image to Amazon ECR
@@ -73,10 +74,11 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ env.MATCHING_CONTAINER_NAME }}
           LOG_LEVEL: ${{ vars.LOG_LEVEL }}
+          CORS: ${{ vars.CORS_ALLOWED_ORIGINS }}
           MATCHING_TIMEOUT: ${{ vars.MATCHING_TIMEOUT }}
         run: |
           cd backend/$IMAGE_TAG
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . --build-arg NODE_ENV=$ENV --build-arg LOG_LEVEL=$LOG_LEVEL --build-arg MATCHING_TIMEOUT=$MATCHING_TIMEOUT
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . --build-arg NODE_ENV=$ENV --build-arg LOG_LEVEL=$LOG_LEVEL --build-arg LOG_LEVEL=$CORS --build-arg MATCHING_TIMEOUT=$MATCHING_TIMEOUT
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
   config:
