--- a/backend/matching-service/Dockerfile
+++ b/backend/matching-service/Dockerfile
@@ -7,6 +7,9 @@ ENV NODE_ENV=$NODE_ENV
 ARG LOG_LEVEL=info
 ENV LOG_LEVEL=$LOG_LEVEL
 
+ARG CORS_ALLOWED_ORIGINS=http://localhost:3000
+ENV LOG_LEVEL=$CORS_ALLOWED_ORIGINS
+
 ARG PORT=5200
 EXPOSE $PORT
 
