--- a/backend/question-service/Dockerfile
+++ b/backend/question-service/Dockerfile
@@ -6,6 +6,9 @@ ENV NODE_ENV=$NODE_ENV
 ARG LOG_LEVEL=info
 ENV LOG_LEVEL=$LOG_LEVEL
 
+ARG CORS_ALLOWED_ORIGINS=http://localhost:3000
+ENV LOG_LEVEL=$CORS_ALLOWED_ORIGINS
+
 ARG PORT=5100
 EXPOSE $PORT
 
