--- a/backend/question-service/Dockerfile
+++ b/backend/question-service/Dockerfile
@@ -7,7 +7,7 @@ ARG LOG_LEVEL=info
 ENV LOG_LEVEL=$LOG_LEVEL
 
 ARG CORS_ALLOWED_ORIGINS=http://localhost:3000
-ENV LOG_LEVEL=$CORS_ALLOWED_ORIGINS
+ENV CORS_ALLOWED_ORIGINS=$CORS_ALLOWED_ORIGINS
 
 ARG PORT=5100
 EXPOSE $PORT
