--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,10 @@
     "setup:frontend": "npm i",
     "setup:user-service": "cd ../backend/user-service && npm i",
     "setup:question-service": "cd ../backend/question-service && npm i",
+    "setup:auth-service": "cd ../backend/auth-service && npm i",
     "setup:collaboration-service": "cd ../backend/collaboration-service && npm i",
     "setup:matching-service": "cd ../backend/matching-service && npm i",
-    "setup-all": "concurrently \"npm run setup:frontend\" \"npm run setup:user-service\" \"npm run setup:question-service\" \"npm run setup:matching-service\" \"npm run setup:collaboration-service\"",
+    "setup-all": "concurrently \"npm run setup:frontend\" \"npm run setup:user-service\" \"npm run setup:question-service\" \"npm run setup:auth-service\" \"npm run setup:matching-service\" \"npm run setup:collaboration-service\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
