Add gateway arg to question dockerfile

--- a/backend/question-service/Dockerfile
+++ b/backend/question-service/Dockerfile
@@ -9,6 +9,10 @@ ENV LOG_LEVEL=$LOG_LEVEL
 ARG CORS_ALLOWED_ORIGINS=http://localhost:3000
 ENV CORS_ALLOWED_ORIGINS=$CORS_ALLOWED_ORIGINS
 
+ARG GATEWAY 
+ENV AUTH_ENDPOINT = "${GATEWAY}/${NODE_ENV}/auth/api/validate"
+ENV AUTH_ADMIN_ENDPOINT = "${AUTH_ENDPOINT}Admin"
+
 ARG PORT=5100
 EXPOSE $PORT
 
