--- a/backend/matching-service/package.json
+++ b/backend/matching-service/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/app.ts | pino-pretty",
-    "build": "tsc -p .",
+    "build": "tsc -p tsconfig.build.json",
     "start": "node dist/app.js",
     "test": "jest"
   },
