--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/app.ts",
     "build": "tsc -p tsconfig.build.json",
-    "start": "node dist/src/app.js",
+    "start": "node dist/app.js",
     "db-update": "npx prisma db push && npx prisma generate",
     "test": "jest"
   },
