Add support for unique gateway integration for resources

--- a/.aws/peerprep-stack-dev.yaml
+++ b/.aws/peerprep-stack-dev.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 
-Description: Peerprep AWS Cloudformation Stack v1
+Description: Peerprep AWS Cloudformation Stack v1.1
 
 Parameters:
   EnvironmentName:
@@ -257,6 +257,8 @@ Resources:
   AutoScalingRole:
     Type: AWS::IAM::Role
     Properties:
+      RoleName: !Join ['', [!Ref EnvironmentName, '-AutoScalingRole']]
+      Description: Authorize to manage auto scaling resources
       AssumeRolePolicyDocument:
         Statement:
           - Effect: Allow
@@ -269,6 +271,7 @@ Resources:
   ECSRole:
     Type: AWS::IAM::Role
     Properties:
+      RoleName: !Join ['', [!Ref EnvironmentName, '-ECSRole']]
       AssumeRolePolicyDocument:
         Statement:
         - Effect: Allow
@@ -300,6 +303,8 @@ Resources:
   ECSTaskExecutionRole:
     Type: AWS::IAM::Role
     Properties:
+      RoleName: !Join ['', [!Ref EnvironmentName, '-ECSTaskExecutionRole']]
+      Description: Authorize to execute tasks
       AssumeRolePolicyDocument:
         Statement:
         - Effect: Allow
@@ -327,6 +332,8 @@ Resources:
   ECSTaskRole:
     Type: AWS::IAM::Role
     Properties:
+      RoleName: !Join ['', [!Ref EnvironmentName, '-ECSTaskRole']]
+      Description: Authorize to initialize task definition
       AssumeRolePolicyDocument:
         Statement:
           - Effect: Allow
@@ -624,6 +631,8 @@ Resources:
             Environment:
               - Name: SERVICE_PORT
                 Value: 80
+              - Name: GATEWAY
+                Value: !Sub 'https://${HttpApi}.execute-api.${AWS::Region}.amazonaws.com'
             LogConfiguration: 
               LogDriver: awslogs
               Options:
@@ -787,6 +796,7 @@ Resources:
     Type: "AWS::ECR::Repository"
     Properties:
         RepositoryName: !Join ['', [!Ref EnvironmentName, '-ecr-container-repo']]
+        EmptyOnDelete: true
         LifecyclePolicy:
             LifecyclePolicyText: "{\"rules\":[{\"rulePriority\":1,\"description\":\"remove old images\",\"selection\":{\"tagStatus\":\"untagged\",\"countType\":\"imageCountMoreThan\",\"countNumber\":5},\"action\":{\"type\":\"expire\"}}]}"
 
@@ -859,114 +869,104 @@ Resources:
   # API Gateway 
   #=================================== 
   HttpApi:
-    Type: AWS::ApiGatewayV2::Api
+    Type: "AWS::ApiGatewayV2::Api"
     Properties:
-      Body:
-        openapi: "3.0.1"
-        info:
-          title: !Join ['', [!Ref EnvironmentName, '-api-gateway']] 
-        paths:
-          /question/api/questions:
-            x-amazon-apigateway-any-method:
-              responses:
-                default:
-                  description: "Default response for ANY /question/api/questions"
-              x-amazon-apigateway-integration:
-                payloadFormatVersion: "1.0"
-                connectionId: !Ref HttpApiVPCLink
-                type: "http_proxy"
-                httpMethod: "ANY"
-                uri: !GetAtt ServiceDiscoveryServiceQuestion.Arn
-                connectionType: "VPC_LINK"
-          /question/api/questions/{questionId}:
-            parameters:
-            - name: "questionId"
-              in: "path"
-              description: "Generated path parameter for questionId"
-              required: true
-              schema:
-                type: "string"
-            x-amazon-apigateway-any-method:
-              responses:
-                default:
-                  description: "Default response for ANY /question/api/questions/{questionId}"
-              x-amazon-apigateway-integration:
-                payloadFormatVersion: "1.0"
-                connectionId: !Ref HttpApiVPCLink
-                type: "http_proxy"
-                httpMethod: "ANY"
-                uri: !GetAtt ServiceDiscoveryServiceQuestion.Arn
-                connectionType: "VPC_LINK"
-          /question/api/health:
-            get:
-              responses:
-                default:
-                  description: "Default response for GET /question/api/health"
-              x-amazon-apigateway-integration:
-                  payloadFormatVersion: "1.0"
-                  connectionId: !Ref HttpApiVPCLink
-                  type: "http_proxy"
-                  httpMethod: "ANY"
-                  uri: !GetAtt ServiceDiscoveryServiceQuestion.Arn
-                  connectionType: "VPC_LINK"
-          /matching/socket/{proxy}:
-            parameters:
-            - name: "proxy"
-              in: "path"
-              description: "Generated path parameter for proxy"
-              required: true
-              schema:
-                type: "string"
-            x-amazon-apigateway-any-method:
-              responses:
-                default:
-                  description: "Default response for ANY /matching/socket/{proxy}"
-              x-amazon-apigateway-integration:
-                payloadFormatVersion: "1.0"
-                connectionId: !Ref HttpApiVPCLink
-                type: "http_proxy"
-                httpMethod: "ANY"
-                uri: !GetAtt ServiceDiscoveryServiceMatching.Arn
-                connectionType: "VPC_LINK"
-          /matching/api/health:
-            get:
-              responses:
-                default:
-                  description: "Default response for GET /matching/api/health"
-              x-amazon-apigateway-integration:
-                payloadFormatVersion: "1.0"
-                connectionId: !Ref HttpApiVPCLink
-                type: "http_proxy"
-                httpMethod: "ANY"
-                uri: !GetAtt ServiceDiscoveryServiceMatching.Arn
-                connectionType: "VPC_LINK"
-          /matching/api/status:
-            get:
-              responses:
-                default:
-                  description: "Default response for GET /matching/api/status"
-              x-amazon-apigateway-integration:
-                payloadFormatVersion: "1.0"
-                connectionId: !Ref HttpApiVPCLink
-                type: "http_proxy"
-                httpMethod: "ANY"
-                uri: !GetAtt ServiceDiscoveryServiceMatching.Arn
-                connectionType: "VPC_LINK"
-        x-amazon-apigateway-cors:
-          allowOrigins:
-            - 'https://master.d2wfcislijzove.amplifyapp.com'
-            - 'https://development.d2wfcislijzove.amplifyapp.com'
-            - 'https://production.d2wfcislijzove.amplifyapp.com/'
-            - 'http://localhost:3000'
-          allowHeaders:
-            - '*'
-          allowMethods:
-            - 'PUT'
-            - 'GET'
-            - 'POST'
-            - 'DELETE'
-        x-amazon-apigateway-importexport-version: "1.0"
+      Name: !Join ['', [!Ref EnvironmentName, '-HttpApi']]
+      ProtocolType: "HTTP"
+      RouteSelectionExpression: "$request.method $request.path"
+      CorsConfiguration: 
+        AllowHeaders: 
+        - "*"
+        AllowMethods: 
+        - "PUT"
+        - "GET"
+        - "POST"
+        - "DELETE"
+        AllowOrigins: 
+        - "https://master.d2wfcislijzove.amplifyapp.com"
+        - "https://development.d2wfcislijzove.amplifyapp.com"
+        - "https://production.d2wfcislijzove.amplifyapp.com/"
+        - "http://localhost:3000"
+      DisableExecuteApiEndpoint: false
 
+  RouteQuestionApiHealth:
+    Type: "AWS::ApiGatewayV2::Route"
+    Properties:
+      ApiId: !Ref HttpApi
+      ApiKeyRequired: false
+      AuthorizationType: "NONE"
+      RequestParameters: {}
+      RouteKey: "GET /question/api/health"
+      Target: !Sub "integrations/${IntegrationQuestion}"
+  RouteQuestionApiQuestions:
+    Type: "AWS::ApiGatewayV2::Route"
+    Properties:
+      ApiId: !Ref HttpApi
+      ApiKeyRequired: false
+      AuthorizationType: "NONE"
+      RequestParameters: {}
+      RouteKey: "ANY /question/api/questions"
+      Target: !Sub "integrations/${IntegrationQuestion}"
+  RouteQuestionApiQuestionsQuestionId:
+    Type: "AWS::ApiGatewayV2::Route"
+    Properties:
+      ApiId: !Ref HttpApi
+      ApiKeyRequired: false
+      AuthorizationType: "NONE"
+      RequestParameters: {}
+      RouteKey: "ANY /question/api/questions/{questionId}"
+      Target: !Sub "integrations/${IntegrationQuestion}"
+  RouteMatchingSocket:
+    Type: "AWS::ApiGatewayV2::Route"
+    Properties:
+      ApiId: !Ref HttpApi
+      ApiKeyRequired: false
+      AuthorizationType: "NONE"
+      RequestParameters: {}
+      RouteKey: "ANY /matching/socket/{proxy}"
+      Target: !Sub "integrations/${IntegrationMatching}"
+  RouteMatchingApiStatus:
+    Type: "AWS::ApiGatewayV2::Route"
+    Properties:
+      ApiId: !Ref HttpApi
+      ApiKeyRequired: false
+      AuthorizationType: "NONE"
+      RequestParameters: {}
+      RouteKey: "GET /matching/api/status"
+      Target: !Sub "integrations/${IntegrationMatching}"
+  RouteMatchingApiHealth:
+    Type: "AWS::ApiGatewayV2::Route"
+    Properties:
+      ApiId: !Ref HttpApi
+      ApiKeyRequired: false
+      AuthorizationType: "NONE"
+      RequestParameters: {}
+      RouteKey: "GET /matching/api/health"
+      Target: !Sub "integrations/${IntegrationMatching}"
+
+  IntegrationQuestion:
+    Type: "AWS::ApiGatewayV2::Integration"
+    Properties:
+      ApiId: !Ref HttpApi
+      Description: !Join ['', [!Ref EnvironmentName, '-IntegrationQuestion']] 
+      ConnectionType: "VPC_LINK"
+      ConnectionId: !Ref HttpApiVPCLink
+      IntegrationMethod: "ANY"
+      IntegrationType: "HTTP_PROXY"
+      IntegrationUri: !GetAtt ServiceDiscoveryServiceQuestion.Arn
+      PayloadFormatVersion: '1.0'
+  IntegrationMatching:
+    Type: "AWS::ApiGatewayV2::Integration"
+    Properties:
+      ApiId: !Ref HttpApi
+      Description: !Join ['', [!Ref EnvironmentName, '-IntegrationMatching']] 
+      ConnectionType: "VPC_LINK"
+      ConnectionId: !Ref HttpApiVPCLink
+      IntegrationMethod: "ANY"
+      IntegrationType: "HTTP_PROXY"
+      IntegrationUri: !GetAtt ServiceDiscoveryServiceMatching.Arn
+      PayloadFormatVersion: '1.0'
+  
   HttpApiProductionStage:
     Type: 'AWS::ApiGatewayV2::Stage'
     Properties:
