--- a/backend/auth-service/Dockerfile
+++ b/backend/auth-service/Dockerfile
@@ -10,7 +10,7 @@ ARG CORS_ALLOWED_ORIGINS=http://localhost:3000
 ENV CORS_ALLOWED_ORIGINS=$CORS_ALLOWED_ORIGINS
 
 ARG GATEWAY 
-ENV AUTH_ENDPOINT = "${GATEWAY}/${NODE_ENV}/auth/api/validate"
+ENV USER_SERVICE_ENDPOINT=$GATEWAY
 
 ARG PORT=5050
 EXPOSE $PORT
