Enable build action for auth and user service

--- a/backend/auth-service/Dockerfile
+++ b/backend/auth-service/Dockerfile
@@ -9,7 +9,7 @@ ENV LOG_LEVEL=$LOG_LEVEL
 ARG CORS_ALLOWED_ORIGINS=http://localhost:3000
 ENV CORS_ALLOWED_ORIGINS=$CORS_ALLOWED_ORIGINS
 
-ARG GATEWAY 
+ENV GATEWAY=http://localhost
 ENV USER_SERVICE_ENDPOINT=$GATEWAY
 
 ARG PORT=5050
