--- a/.github/workflows/deploy_backend_aws.yml
+++ b/.github/workflows/deploy_backend_aws.yml
@@ -67,6 +67,38 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . --build-arg NODE_ENV=$ENV --build-arg LOG_LEVEL=$LOG_LEVEL --build-arg CORS_ALLOWED_ORIGINS=$CORS --build-arg MATCHING_TIMEOUT=$MATCHING_TIMEOUT
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
+      - name: Build, tag, and push ${{ env.AUTH_CONTAINER_NAME }} image to Amazon ECR
+        id: build-auth-service-image
+        env:
+          ENV: ${{ vars.BUILD_ENV }}
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{ env.AUTH_CONTAINER_NAME }}
+          LOG_LEVEL: ${{ vars.LOG_LEVEL }}
+          CORS: ${{ vars.CORS_ALLOWED_ORIGINS }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          EMAIL_VERIFICATION_SECRET: ${{ secrets.EMAIL_VERIFICATION_SECRET }}
+          NM_MAIL: ${{ secrets.NM_MAIL }}
+          NM_PASS: ${{ secrets.NM_PASS }}
+        run: |
+          cd backend/$IMAGE_TAG
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . --build-arg NODE_ENV=$ENV --build-arg LOG_LEVEL=$LOG_LEVEL --build-arg CORS_ALLOWED_ORIGINS=$CORS --build-arg JWT_SECRET=$JWT_SECRET --build-arg EMAIL_VERIFICATION_SECRET=$EMAIL_VERIFICATION_SECRET --build-arg NM_MAIL=$NM_MAIL --build-arg NM_PASS=$NM_PASS
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+      - name: Build, tag, and push ${{ env.USER_CONTAINER_NAME }} image to Amazon ECR
+        id: build-user-service-image
+        env:
+          ENV: ${{ vars.BUILD_ENV }}
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{ env.USER_CONTAINER_NAME }}
+          LOG_LEVEL: ${{ vars.LOG_LEVEL }}
+          CORS: ${{ vars.CORS_ALLOWED_ORIGINS }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          EMAIL_VERIFICATION_SECRET: ${{ secrets.EMAIL_VERIFICATION_SECRET }}
+        run: |
+          cd backend/$IMAGE_TAG
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . --build-arg NODE_ENV=$ENV --build-arg LOG_LEVEL=$LOG_LEVEL --build-arg CORS_ALLOWED_ORIGINS=$CORS --build-arg DATABASE_URL=$DATABASE_URL --build-arg EMAIL_VERIFICATION_SECRET=$EMAIL_VERIFICATION_SECRET
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
   config:
     name: Deploy cluster and service
     runs-on: ubuntu-latest
@@ -85,16 +117,16 @@ jobs:
             ecs_service: peerprep-dev-ServiceMatching,
             ecs_task_def: peerprep-dev-TaskDefinitionMatching
           },
-          # {
-          #   name: user-service,
-          #   ecs_service: peerprep-dev-ServiceUser,
-          #   ecs_task_def: peerprep-dev-TaskDefinitionUser
-          # },
-          # {
-          #   name: auth-service,
-          #   ecs_service: peerprep-dev-ServiceAuth,
-          #   ecs_task_def: peerprep-dev-TaskDefinitionAuth
-          # },
+          {
+            name: user-service,
+            ecs_service: peerprep-dev-ServiceUser,
+            ecs_task_def: peerprep-dev-TaskDefinitionUser
+          },
+          {
+            name: auth-service,
+            ecs_service: peerprep-dev-ServiceAuth,
+            ecs_task_def: peerprep-dev-TaskDefinitionAuth
+          },
           # {
           #   name: collaboration-service,
           #   ecs_service: peerprep-dev-ServiceCollaboration,
