--- a/backend/user-service/Dockerfile
+++ b/backend/user-service/Dockerfile
@@ -9,7 +9,7 @@ ENV LOG_LEVEL=$LOG_LEVEL
 ARG CORS_ALLOWED_ORIGINS=http://localhost:3000
 ENV CORS_ALLOWED_ORIGINS=$CORS_ALLOWED_ORIGINS
 
-ARG GATEWAY 
+ENV GATEWAY=http://localhost
 ENV AUTH_ENDPOINT="${GATEWAY}/${NODE_ENV}/auth/api/validate"
 
 ARG PORT=5005
