--- a/.github/workflows/deploy_backend_aws.yml
+++ b/.github/workflows/deploy_backend_aws.yml
@@ -46,7 +46,7 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ env.QUESTION_CONTAINER_NAME }}
           LOG_LEVEL: ${{ vars.LOG_LEVEL }}
-          CORS: ${{ vars.CORS_ALLOWED_ORIGINS }}
+          CORS: ${{ secrets.CORS_ALLOWED_ORIGINS }}
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: |
           cd backend/$IMAGE_TAG
@@ -60,7 +60,7 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ env.MATCHING_CONTAINER_NAME }}
           LOG_LEVEL: ${{ vars.LOG_LEVEL }}
-          CORS: ${{ vars.CORS_ALLOWED_ORIGINS }}
+          CORS: ${{ secrets.CORS_ALLOWED_ORIGINS }}
           MATCHING_TIMEOUT: ${{ vars.MATCHING_TIMEOUT }}
         run: |
           cd backend/$IMAGE_TAG
@@ -69,20 +69,21 @@ jobs:
 
       - name: Build, tag, and push ${{ env.AUTH_CONTAINER_NAME }} image to Amazon ECR
         id: build-auth-service-image
+        uses: docker/build-push-action@v5
         env:
-          ENV: ${{ vars.BUILD_ENV }}
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ env.AUTH_CONTAINER_NAME }}
-          LOG_LEVEL: ${{ vars.LOG_LEVEL }}
-          CORS: ${{ vars.CORS_ALLOWED_ORIGINS }}
-          JWT_SECRET: ${{ secrets.JWT_SECRET }}
-          EMAIL_VERIFICATION_SECRET: ${{ secrets.EMAIL_VERIFICATION_SECRET }}
-          NM_MAIL: ${{ secrets.NM_MAIL }}
-          NM_PASS: ${{ secrets.NM_PASS }}
-        run: |
-          cd backend/$IMAGE_TAG
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . --build-arg NODE_ENV=$ENV --build-arg LOG_LEVEL=$LOG_LEVEL --build-arg CORS_ALLOWED_ORIGINS=$CORS --build-arg JWT_SECRET=$JWT_SECRET --build-arg EMAIL_VERIFICATION_SECRET=$EMAIL_VERIFICATION_SECRET --build-arg NM_MAIL=$NM_MAIL --build-arg NM_PASS=$NM_PASS
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        with: 
+          context: backend/$IMAGE_TAG
+          push: true
+          tags: ${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY:$IMAGE_TAG
+          build-args: |
+            NODE_ENV: ${{ vars.BUILD_ENV }}
+            LOG_LEVEL: ${{ vars.LOG_LEVEL }}
+            CORS_ALLOWED_ORIGINS: ${{ secrets.CORS_ALLOWED_ORIGINS }}
+            JWT_SECRET: ${{ secrets.JWT_SECRET }}
+            EMAIL_VERIFICATION_SECRET: ${{ secrets.EMAIL_VERIFICATION_SECRET }}
+            NM_MAIL: ${{ secrets.NM_MAIL }}
+            NM_PASS: ${{ secrets.NM_PASS }}
 
       - name: Build, tag, and push ${{ env.USER_CONTAINER_NAME }} image to Amazon ECR
         id: build-user-service-image
@@ -91,12 +92,12 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ env.USER_CONTAINER_NAME }}
           LOG_LEVEL: ${{ vars.LOG_LEVEL }}
-          CORS: ${{ vars.CORS_ALLOWED_ORIGINS }}
+          CORS: ${{ secrets.CORS_ALLOWED_ORIGINS }}
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          EMAIL_VERIFICATION_SECRET: ${{ secrets.EMAIL_VERIFICATION_SECRET }}
+          EMAIL: ${{ secrets.EMAIL_VERIFICATION_SECRET }}
         run: |
           cd backend/$IMAGE_TAG
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . --build-arg NODE_ENV=$ENV --build-arg LOG_LEVEL=$LOG_LEVEL --build-arg CORS_ALLOWED_ORIGINS=$CORS --build-arg DATABASE_URL=$DATABASE_URL --build-arg EMAIL_VERIFICATION_SECRET=$EMAIL_VERIFICATION_SECRET
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . --build-arg NODE_ENV=$ENV --build-arg LOG_LEVEL=$LOG_LEVEL --build-arg CORS_ALLOWED_ORIGINS=$CORS --build-arg DATABASE_URL=$DATABASE_URL --build-arg EMAIL_VERIFICATION_SECRET=$EMAIL
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
   config:
