--- a/backend/question-service/Dockerfile
+++ b/backend/question-service/Dockerfile
@@ -9,7 +9,7 @@ ENV LOG_LEVEL=$LOG_LEVEL
 ARG CORS_ALLOWED_ORIGINS=http://localhost:3000
 ENV CORS_ALLOWED_ORIGINS=$CORS_ALLOWED_ORIGINS
 
-ENV AUTH_ENDPOINT="${NODE_ENV}/auth/api/validate"
+ENV AUTH_ENDPOINT="auth/api/validate"
 ENV AUTH_ADMIN_ENDPOINT="${AUTH_ENDPOINT}Admin"
 
 ARG PORT=5100
