--- a/.github/workflows/deploy_backend_aws.yml
+++ b/.github/workflows/deploy_backend_aws.yml
@@ -46,10 +46,10 @@ jobs:
           push: true
           tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.QUESTION_CONTAINER_NAME }}
           build-args: |
-            NODE_ENV='${{ vars.BUILD_ENV }}'
-            LOG_LEVEL='${{ vars.LOG_LEVEL }}'
-            CORS_ALLOWED_ORIGINS='${{ secrets.CORS_ALLOWED_ORIGINS }}'
-            DATABASE_URL='${{ secrets.DATABASE_URL }}'
+            NODE_ENV=${{ vars.BUILD_ENV }}
+            LOG_LEVEL=${{ vars.LOG_LEVEL }}
+            CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
+            DATABASE_URL=${{ secrets.DATABASE_URL }}
 
       - name: Build, tag, and push ${{ env.MATCHING_CONTAINER_NAME }} image to Amazon ECR
         uses: docker/build-push-action@v5
@@ -58,9 +58,9 @@ jobs:
           push: true
           tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.MATCHING_CONTAINER_NAME }}
           build-args: |
-            NODE_ENV='${{ vars.BUILD_ENV }}'
-            LOG_LEVEL='${{ vars.LOG_LEVEL }}'
-            CORS_ALLOWED_ORIGINS='${{ secrets.CORS_ALLOWED_ORIGINS }}'
+            NODE_ENV=${{ vars.BUILD_ENV }}
+            LOG_LEVEL=${{ vars.LOG_LEVEL }}
+            CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
             MATCHING_TIMEOUT=${{ vars.MATCHING_TIMEOUT }} 
 
       - name: Build, tag, and push ${{ env.AUTH_CONTAINER_NAME }} image to Amazon ECR
@@ -70,13 +70,13 @@ jobs:
           push: true
           tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.AUTH_CONTAINER_NAME }}
           build-args: |
-            NODE_ENV='${{ vars.BUILD_ENV }}'
-            LOG_LEVEL='${{ vars.LOG_LEVEL }}'
-            CORS_ALLOWED_ORIGINS='${{ secrets.CORS_ALLOWED_ORIGINS }}'
-            JWT_SECRET='${{ secrets.JWT_SECRET }}'
-            EMAIL_VERIFICATION_SECRET='${{ secrets.EMAIL_VERIFICATION_SECRET }}'
-            NM_MAIL='${{ secrets.NM_MAIL }}'
-            NM_PASS='${{ secrets.NM_PASS }}'
+            NODE_ENV=${{ vars.BUILD_ENV }}
+            LOG_LEVEL=${{ vars.LOG_LEVEL }}
+            CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
+            JWT_SECRET=${{ secrets.JWT_SECRET }}
+            EMAIL_VERIFICATION_SECRET=${{ secrets.EMAIL_VERIFICATION_SECRET }}
+            NM_MAIL=${{ secrets.NM_MAIL }}
+            NM_PASS=${{ secrets.NM_PASS }}
 
       - name: Build, tag, and push ${{ env.USER_CONTAINER_NAME }} image to Amazon ECR
         uses: docker/build-push-action@v5
@@ -85,11 +85,11 @@ jobs:
           push: true
           tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.USER_CONTAINER_NAME }}
           build-args: |
-            NODE_ENV='${{ vars.BUILD_ENV }}'
-            LOG_LEVEL='${{ vars.LOG_LEVEL }}'
-            CORS_ALLOWED_ORIGINS='${{ secrets.CORS_ALLOWED_ORIGINS }}'
-            DATABASE_URL='${{ secrets.DATABASE_URL }}'
-            EMAIL_VERIFICATION_SECRET='${{ secrets.EMAIL_VERIFICATION_SECRET }}'
+            NODE_ENV=${{ vars.BUILD_ENV }}
+            LOG_LEVEL=${{ vars.LOG_LEVEL }}
+            CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
+            DATABASE_URL=${{ secrets.DATABASE_URL }}
+            EMAIL_VERIFICATION_SECRET=${{ secrets.EMAIL_VERIFICATION_SECRET }}
 
   deploy:
     name: Deploy
