Add gateway env to auth task definition

--- a/.aws/peerprep-stack-dev.yaml
+++ b/.aws/peerprep-stack-dev.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 
-Description: Peerprep AWS Cloudformation Stack v1.2
+Description: Peerprep AWS Cloudformation Stack v1.2.1
 
 Parameters:
   EnvironmentName:
@@ -705,6 +705,8 @@ Resources:
             Environment:
               - Name: SERVICE_PORT
                 Value: 80
+              - Name: GATEWAY
+                Value: !Sub 'https://${HttpApi}.execute-api.${AWS::Region}.amazonaws.com'
             LogConfiguration: 
               LogDriver: awslogs
               Options:
