--- a/amplify.yaml
+++ b/amplify.yaml
@@ -7,6 +7,7 @@ applications:
             - npm install
         build:
           commands:
+            - echo "Build environment is ${BUILD_ENV}"
             - npm run build
       artifacts:
         baseDirectory: .next
