--- a/.aws/peerprep-stack.yaml
+++ b/.aws/peerprep-stack.yaml
@@ -1135,89 +1135,174 @@ Resources:
   #=================================== 
   # ECS Autoscaling
   #=================================== 
-  AutoScalingTargetQuestion:
+  AutoScalingTargetDevQuestion:
     Type: AWS::ApplicationAutoScaling::ScalableTarget
     Properties:
       MinCapacity: !Ref MinContainers
       MaxCapacity: !Ref MaxContainers
-      ResourceId: !Join ['/', [service, !Ref ECSDevCluster, !GetAtt ServiceQuestion.Name]]
+      ResourceId: !Join ['/', [service, !Ref ECSDevCluster, !GetAtt ServiceDevQuestion.Name]]
       ScalableDimension: ecs:service:DesiredCount
       ServiceNamespace: ecs
       RoleARN: !GetAtt AutoScalingRole.Arn
 
-  AutoScalingTargetMatching:
+  AutoScalingTargetDevMatching:
     Type: AWS::ApplicationAutoScaling::ScalableTarget
     Properties:
       MinCapacity: !Ref MinContainers
       MaxCapacity: !Ref MaxContainers
-      ResourceId: !Join ['/', [service, !Ref ECSDevCluster, !GetAtt ServiceMatching.Name]]
+      ResourceId: !Join ['/', [service, !Ref ECSDevCluster, !GetAtt ServiceDevMatching.Name]]
       ScalableDimension: ecs:service:DesiredCount
       ServiceNamespace: ecs
       RoleARN: !GetAtt AutoScalingRole.Arn
 
-  AutoScalingTargetAuth:
+  AutoScalingTargetDevAuth:
     Type: AWS::ApplicationAutoScaling::ScalableTarget
     Properties:
       MinCapacity: !Ref MinContainers
       MaxCapacity: !Ref MaxContainers
-      ResourceId: !Join ['/', [service, !Ref ECSDevCluster, !GetAtt ServiceAuth.Name]]
+      ResourceId: !Join ['/', [service, !Ref ECSDevCluster, !GetAtt ServiceDevAuth.Name]]
       ScalableDimension: ecs:service:DesiredCount
       ServiceNamespace: ecs
       RoleARN: !GetAtt AutoScalingRole.Arn
 
-  AutoScalingTargetUser:
+  AutoScalingTargetDevUser:
     Type: AWS::ApplicationAutoScaling::ScalableTarget
     Properties:
       MinCapacity: !Ref MinContainers
       MaxCapacity: !Ref MaxContainers
-      ResourceId: !Join ['/', [service, !Ref ECSDevCluster, !GetAtt ServiceUser.Name]]
+      ResourceId: !Join ['/', [service, !Ref ECSDevCluster, !GetAtt ServiceDevUser.Name]]
       ScalableDimension: ecs:service:DesiredCount
       ServiceNamespace: ecs
       RoleARN: !GetAtt AutoScalingRole.Arn
 
-  AutoScalingPolicyQuestion:
+  AutoScalingPolicyDevQuestion:
     Type: AWS::ApplicationAutoScaling::ScalingPolicy
     Properties:
-      PolicyName: !Join ['', [!GetAtt ServiceQuestion.Name, '-AutoScalingPolicy']]
+      PolicyName: !Join ['', [!GetAtt ServiceDevQuestion.Name, '-AutoScalingPolicy']]
       PolicyType: TargetTrackingScaling
-      ScalingTargetId: !Ref AutoScalingTargetQuestion
+      ScalingTargetId: !Ref AutoScalingTargetDevQuestion
       TargetTrackingScalingPolicyConfiguration:
         PredefinedMetricSpecification:
           PredefinedMetricType: ECSServiceAverageCPUUtilization
         TargetValue: !Ref AutoScalingTargetValue
 
-  AutoScalingPolicyMatching:
+  AutoScalingPolicyDevMatching:
     Type: AWS::ApplicationAutoScaling::ScalingPolicy
     Properties:
-      PolicyName: !Join ['', [!GetAtt ServiceMatching.Name, '-AutoScalingPolicy']]
+      PolicyName: !Join ['', [!GetAtt ServiceDevMatching.Name, '-AutoScalingPolicy']]
       PolicyType: TargetTrackingScaling
-      ScalingTargetId: !Ref AutoScalingTargetMatching
+      ScalingTargetId: !Ref AutoScalingTargetDevMatching
       TargetTrackingScalingPolicyConfiguration:
         PredefinedMetricSpecification:
           PredefinedMetricType: ECSServiceAverageCPUUtilization
         TargetValue: !Ref AutoScalingTargetValue
 
-  AutoScalingPolicyAuth:
+  AutoScalingPolicyDevAuth:
     Type: AWS::ApplicationAutoScaling::ScalingPolicy
     Properties:
-      PolicyName: !Join ['', [!GetAtt ServiceAuth.Name, '-AutoScalingPolicy']]
+      PolicyName: !Join ['', [!GetAtt ServiceDevAuth.Name, '-AutoScalingPolicy']]
       PolicyType: TargetTrackingScaling
-      ScalingTargetId: !Ref AutoScalingTargetAuth
+      ScalingTargetId: !Ref AutoScalingTargetDevAuth
       TargetTrackingScalingPolicyConfiguration:
         PredefinedMetricSpecification:
           PredefinedMetricType: ECSServiceAverageCPUUtilization
         TargetValue: !Ref AutoScalingTargetValue
   
-  AutoScalingPolicyUser:
+  AutoScalingPolicyDevUser:
     Type: AWS::ApplicationAutoScaling::ScalingPolicy
     Properties:
-      PolicyName: !Join ['', [!GetAtt ServiceUser.Name, '-AutoScalingPolicy']]
+      PolicyName: !Join ['', [!GetAtt ServiceDevUser.Name, '-AutoScalingPolicy']]
       PolicyType: TargetTrackingScaling
-      ScalingTargetId: !Ref AutoScalingTargetUser
+      ScalingTargetId: !Ref AutoScalingTargetDevUser
       TargetTrackingScalingPolicyConfiguration:
         PredefinedMetricSpecification:
           PredefinedMetricType: ECSServiceAverageCPUUtilization
         TargetValue: !Ref AutoScalingTargetValue
+
+  AutoScalingTargetProdQuestion:
+    Type: AWS::ApplicationAutoScaling::ScalableTarget
+    Properties:
+      MinCapacity: !Ref MinContainers
+      MaxCapacity: !Ref MaxContainers
+      ResourceId: !Join ['/', [service, !Ref ECSDevCluster, !GetAtt ServiceDevQuestion.Name]]
+      ScalableDimension: ecs:service:DesiredCount
+      ServiceNamespace: ecs
+      RoleARN: !GetAtt AutoScalingRole.Arn
+
+  AutoScalingTargetProdMatching:
+    Type: AWS::ApplicationAutoScaling::ScalableTarget
+    Properties:
+      MinCapacity: !Ref MinContainers
+      MaxCapacity: !Ref MaxContainers
+      ResourceId: !Join ['/', [service, !Ref ECSDevCluster, !GetAtt ServiceDevMatching.Name]]
+      ScalableDimension: ecs:service:DesiredCount
+      ServiceNamespace: ecs
+      RoleARN: !GetAtt AutoScalingRole.Arn
+
+  AutoScalingTargetProdAuth:
+    Type: AWS::ApplicationAutoScaling::ScalableTarget
+    Properties:
+      MinCapacity: !Ref MinContainers
+      MaxCapacity: !Ref MaxContainers
+      ResourceId: !Join ['/', [service, !Ref ECSDevCluster, !GetAtt ServiceDevAuth.Name]]
+      ScalableDimension: ecs:service:DesiredCount
+      ServiceNamespace: ecs
+      RoleARN: !GetAtt AutoScalingRole.Arn
+
+  AutoScalingTargetProdUser:
+    Type: AWS::ApplicationAutoScaling::ScalableTarget
+    Properties:
+      MinCapacity: !Ref MinContainers
+      MaxCapacity: !Ref MaxContainers
+      ResourceId: !Join ['/', [service, !Ref ECSDevCluster, !GetAtt ServiceDevUser.Name]]
+      ScalableDimension: ecs:service:DesiredCount
+      ServiceNamespace: ecs
+      RoleARN: !GetAtt AutoScalingRole.Arn
+
+  AutoScalingPolicyProdQuestion:
+    Type: AWS::ApplicationAutoScaling::ScalingPolicy
+    Properties:
+      PolicyName: !Join ['', [!GetAtt ServiceDevQuestion.Name, '-AutoScalingPolicy']]
+      PolicyType: TargetTrackingScaling
+      ScalingTargetId: !Ref AutoScalingTargetProdQuestion
+      TargetTrackingScalingPolicyConfiguration:
+        PredefinedMetricSpecification:
+          PredefinedMetricType: ECSServiceAverageCPUUtilization
+        TargetValue: !Ref AutoScalingTargetValue
+
+  AutoScalingPolicyProdMatching:
+    Type: AWS::ApplicationAutoScaling::ScalingPolicy
+    Properties:
+      PolicyName: !Join ['', [!GetAtt ServiceDevMatching.Name, '-AutoScalingPolicy']]
+      PolicyType: TargetTrackingScaling
+      ScalingTargetId: !Ref AutoScalingTargetProdMatching
+      TargetTrackingScalingPolicyConfiguration:
+        PredefinedMetricSpecification:
+          PredefinedMetricType: ECSServiceAverageCPUUtilization
+        TargetValue: !Ref AutoScalingTargetValue
+
+  AutoScalingPolicyProdAuth:
+    Type: AWS::ApplicationAutoScaling::ScalingPolicy
+    Properties:
+      PolicyName: !Join ['', [!GetAtt ServiceDevAuth.Name, '-AutoScalingPolicy']]
+      PolicyType: TargetTrackingScaling
+      ScalingTargetId: !Ref AutoScalingTargetProdAuth
+      TargetTrackingScalingPolicyConfiguration:
+        PredefinedMetricSpecification:
+          PredefinedMetricType: ECSServiceAverageCPUUtilization
+        TargetValue: !Ref AutoScalingTargetValue
+  
+  AutoScalingPolicyProdUser:
+    Type: AWS::ApplicationAutoScaling::ScalingPolicy
+    Properties:
+      PolicyName: !Join ['', [!GetAtt ServiceDevUser.Name, '-AutoScalingPolicy']]
+      PolicyType: TargetTrackingScaling
+      ScalingTargetId: !Ref AutoScalingTargetProdUser
+      TargetTrackingScalingPolicyConfiguration:
+        PredefinedMetricSpecification:
+          PredefinedMetricType: ECSServiceAverageCPUUtilization
+        TargetValue: !Ref AutoScalingTargetValue
+
 
   #=================================== 
   # Cognito 
@@ -1603,24 +1688,9 @@ Outputs:
   ECSDevClusterName:
     Description: The name of the ECS cluster
     Value: !Ref 'ECSDevCluster'
-  ServiceQuestionName:
-    Description: The name of the ECS Service Question
-    Value: !Ref 'ServiceQuestion'
-  ServiceMatchingName:
-    Description: The name of the ECS Service Matching
-    Value: !Ref 'ServiceMatching'
-  ServiceUserName:
-    Description: The name of the ECS Service User
-    Value: !Ref 'ServiceUser'
-  ServiceAuthName:
-    Description: The name of the ECS Service Auth
-    Value: !Ref 'ServiceAuth'
-  # ServiceCollaborationName:
-  #   Description: The name of the ECS Service Collaboration
-  #   Value: !Ref 'ServiceCollaboration'
-  # ServiceHistoryName:
-  #   Description: The name of the ECS Service History
-  #   Value: !Ref 'ServiceHistory'
+  ECSProdClusterName:
+    Description: The name of the ECS cluster
+    Value: !Ref 'ECSProdCluster'
   VpcId:
     Description: The ID of the VPC that this stack is deployed in
     Value: !Ref 'VPC'
