--- a/.aws/peerprep-stack.yaml
+++ b/.aws/peerprep-stack.yaml
@@ -306,6 +306,7 @@ Resources:
                 - 'ecr:BatchGetImage'
 
                 # Allow the ECS tasks to upload logs to CloudWatch
+                - 'logs:CreateLogGroup'
                 - 'logs:CreateLogStream'
                 - 'logs:PutLogEvents'
               Resource: '*'
@@ -328,7 +329,6 @@ Resources:
             Statement:
             - Effect: Allow
               Action:
-                # Allow the ECS tasks to create log group to CloudWatch
                 - 'logs:CreateLogGroup'
               Resource: '*'
   
