--- a/.aws/peerprep-stack.yaml
+++ b/.aws/peerprep-stack.yaml
@@ -1224,7 +1224,7 @@ Resources:
     Properties:
       MinCapacity: !Ref MinContainers
       MaxCapacity: !Ref MaxContainers
-      ResourceId: !Join ['/', [service, !Ref ECSDevCluster, !GetAtt ServiceDevQuestion.Name]]
+      ResourceId: !Join ['/', [service, !Ref ECSProdCluster, !GetAtt ServiceProdQuestion.Name]]
       ScalableDimension: ecs:service:DesiredCount
       ServiceNamespace: ecs
       RoleARN: !GetAtt AutoScalingRole.Arn
@@ -1234,7 +1234,7 @@ Resources:
     Properties:
       MinCapacity: !Ref MinContainers
       MaxCapacity: !Ref MaxContainers
-      ResourceId: !Join ['/', [service, !Ref ECSDevCluster, !GetAtt ServiceDevMatching.Name]]
+      ResourceId: !Join ['/', [service, !Ref ECSProdCluster, !GetAtt ServiceProdMatching.Name]]
       ScalableDimension: ecs:service:DesiredCount
       ServiceNamespace: ecs
       RoleARN: !GetAtt AutoScalingRole.Arn
