--- a/backend/user-service/Dockerfile
+++ b/backend/user-service/Dockerfile
@@ -22,7 +22,7 @@ ENV LOG_LEVEL=$LOG_LEVEL
 ARG CORS_ALLOWED_ORIGINS=http://localhost:3000
 ENV CORS_ALLOWED_ORIGINS=$CORS_ALLOWED_ORIGINS
 
-ENV AUTH_ENDPOINT="${GATEWAY}/${NODE_ENV}/auth/api/validate"
+ENV AUTH_ENDPOINT="${GATEWAY}/auth/api/validate"
 
 ARG PORT=5005
 ENV PORT=$PORT
