--- a/.aws/amplify.yaml
+++ b/.aws/amplify.yaml
@@ -7,7 +7,7 @@ applications:
             - npm install
         build:
           commands:
-            - echo "Build[${BUILD_ENV}] Gateway[${ENDPOINT}]"
+            - echo "Build[${BUILD_ENV}] API_GATEWAY[${ENDPOINT}]"
             - npm run build
       artifacts:
         baseDirectory: .next
